fix: prevent video footer bug on safari (#4)

--- a/css/main.scss
+++ b/css/main.scss
@@ -201,7 +201,7 @@ section.offwhite {
   height: 100vh;
 }
 .video-container{
-  position: fixed;
+  /*position: fixed;*/
   background-color: #2f3c46;
   top: 0;
   bottom: 0;
